kubernetes/travelmanagement/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travelmngt-app
  labels:
    app: travelmngt-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travelmngt-app
      tier: backend
  template:
    metadata:
      labels:
        app: travelmngt-app
        tier: backend
    spec:
      containers:
        - name: travelmngt-app
          image: mig3177/travma-travelmanagement-backend:latest
          ports:
            - name: travelmngt-app
              containerPort: 8086
          imagePullPolicy: Always
          resources:
            requests:
              memory: "10Mi"
              cpu: "100m"
            limits:
              memory: "100Mi"
              cpu: "100Mi"
