kubernetes/travelmanagement/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travelmngt-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /travma(/|$)(.*)
        backend:
          service:
            name: travelmngt-web-service
            port:
              number: 8085
